# Sobesity-BE

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.base.yml  docker-compose.builder.yml  docker-compose.test.yml  docker-compose.yml  format.yml  pyproject.toml
.github/workflows/: tests_on_push.yml
etc/backend/: Dockerfile  entrypoint.sh  run-server.sh
etc/backend/env/: dev.env  test.env
etc/db/entypoints/: init-db.sh
etc/db/env/: dev.env  test.env
src/alembic/: env.py
src/alembic/versions/: 20242755f6c1_add_column_right_to_answer.py  23bed438f3a8_create_answer_table.py  3801542386f4_create_user_table.py  3cda5e1eaa3c_create_table_users_knowledge.py  67e9b7ec96be_create_level_table.py  6bde77595527_edit_type_of_column_code.py  735884864322_edit_column_type.py  73f77aedb201_add_question_id_to_answer.py  749a67e4589a_add_code_to_question.py  7d44a4a3adcd_create_table_type.py  975f6f1d8fee_add_skill_id_in_question_table.py  9b1b908d7f3b_add_type_to_question.py  a2e479e35086_create_question_table.py  a990ffce9c9d_edit_limit_of_column_answer.py  d3cdadbec5ab_add_level_id_to_question_table.py  d4122e36b6dc_add_names_to_user.py  e3a3cec1e9be_add_forigin_key_for_type.py  f84c64349c87_create_skill_table.py
src/sobesity/: config.py  containers.py  jwt.py  webapp.py
src/sobesity/domain/: constants.py
src/sobesity/infrastructure/: constants.py  datasource.py
src/tests/: conftest.py
src/tests/factories/: __init__.py  answer.py  knowledge.py  level.py  question.py  question_type.py  skill.py  type.py  user.py
src/tests/intergration/: conftest.py  (+1 more)
(+118 files in other folders)
